--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.7",
+    "apollo-link-error": "^1.1.13",
     "bootstrap": "^5.2.3",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
